Switch to Java 17 so that we can use it's features (including easier process tests)